refactor : controller view 단에서 도메인을 알 수 없게 서비스 DTO 추가 및 테스트 변경