@@ -11,6 +11,7 @@ import roomescape.reservation.repository.ReservationRepository;
 import roomescape.reservationtime.domain.ReservationTime;
 import roomescape.service.stub.FakeReservationRepository;
 import roomescape.service.stub.FakeThemeRepository;
+import roomescape.theme.domain.Theme;
 import roomescape.theme.exception.ThemeConstraintException;
 import roomescape.theme.exception.ThemeDuplicateException;
 import roomescape.theme.repository.ThemeRepository;
@@ -20,10 +21,11 @@ class ThemeServiceTest {
 
     private ThemeService themeService;
     private ReservationRepository reservationRepository;
+    private ThemeRepository themeRepository;
 
     @BeforeEach
     void setUp() {
-        ThemeRepository themeRepository = new FakeThemeRepository();
+        themeRepository = new FakeThemeRepository();
         reservationRepository = new FakeReservationRepository();
         themeService = new ThemeService(themeRepository, reservationRepository);
     }
@@ -32,7 +34,7 @@ class ThemeServiceTest {
     @DisplayName("같은 이름 테마 중복 생성 예외")
     void save_whenDuplicateName_throws() {
         // given
-        themeService.save("미술관의 밤", "설명", "thumb");
+        themeRepository.save(Theme.createNew("미술관의 밤", "설명", "thumb"));
 
         // when & then
         assertThatThrownBy(() -> themeService.save("미술관의 밤", "다른 설명", "thumb2"))
@@ -43,21 +45,21 @@ class ThemeServiceTest {
     @DisplayName("예약 존재하는 테마 삭제 예외")
     void deleteById_whenExistsReservation_throws() {
         // given
-        themeService.save("미술관의 밤", "설명", "thumb");
-        themeService.save("미술관의 밤2", "설명", "thumb");
+        themeRepository.save(Theme.createNew("미술관의 밤", "설명", "thumb"));
+        themeRepository.save(Theme.createNew("미술관의 밤2", "설명", "thumb"));
         reservationRepository.save(
                 Reservation.createNew(
-                        "홍길동",
+                        "쿠다",
                         LocalDate.now(),
                         ReservationTime.createNew(
                                 java.time.LocalTime.of(10, 0),
-                                themeService.getAll().get(0)
+                                themeRepository.findAll().getFirst()
                         )
                 )
         );
 
         // when & then
-        assertThatThrownBy(() -> themeService.deleteById(themeService.getAll().get(0).getId()))
+        assertThatThrownBy(() -> themeService.deleteById(themeRepository.findAll().getFirst().getId()))
                 .isInstanceOf(ThemeConstraintException.class);
 
     }
